# streamlit-app-template

./: README.md  hello.py  pyproject.toml
.streamlit/: config.toml
src/: main.py
src/backend/: example_sales.py  example_task.py
src/config/: config.yaml  screen_scanner.py
src/frontend/Files/: example_Upload.py
src/frontend/Home/: Home.py
src/frontend/Modules/: Sample_page.py  example_Sales.py  example_Task.py
src/frontend/Overview/: Home.py
